added civic svg icon to sidebar header

--- a/app/client/src/app/app.component.html
+++ b/app/client/src/app/app.component.html
@@ -7,7 +7,7 @@
             [nzTrigger]="null">
     <div class="sidebar-logo">
       <a href="/" target="_blank">
-        <img src="https://ng.ant.design/assets/img/logo.svg" alt="logo">
+        <img src="assets/images/civic-icon_half.svg" alt="CIViC - Clinical Interpretations of Variants in Cancer">
         <h1>CIViC</h1>
       </a>
     </div>
