--- a/app/client/src/styles.less
+++ b/app/client/src/styles.less
@@ -6,5 +6,5 @@
 // Override less variables to here
 // View all variables: https://github.com/NG-ZORRO/ng-zorro-antd/blob/master/components/style/themes/default.less
 
-// @primary-color: #1890ff;
+// @primary-color: #4B2065;
 /* You can add global styles to this file, and also import other style files */
