graphql codegen for angular services working

--- a/app/client/src/app/app.component.html
+++ b/app/client/src/app/app.component.html
@@ -9,6 +9,7 @@
       <a href="/" target="_blank">
         <img src="assets/images/civic-icon_half.svg" alt="CIViC - Clinical Interpretations of Variants in Cancer">
         <h1>CIViC</h1>
+        {{ test }}
       </a>
     </div>
     <ul nz-menu nzTheme="dark" nzMode="inline" [nzInlineCollapsed]="isCollapsed">
