--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -8,8 +8,7 @@
     <div class="sidebar-logo">
       <a href="/" target="_blank">
         <img src="assets/images/civic-icon_half.svg" alt="CIViC - Clinical Interpretations of Variants in Cancer">
-        <h1>CIViC</h1>
-        {{ test }}
+        <h1 id="app-title">CIViC</h1>
       </a>
     </div>
     <ul nz-menu nzTheme="dark" nzMode="inline" [nzInlineCollapsed]="isCollapsed">
