added genes link to main menu

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -18,10 +18,7 @@
             <a routerLink="/welcome">Welcome</a>
           </li>
           <li nz-menu-item nzMatchRouter>
-            <a>Monitor</a>
-          </li>
-          <li nz-menu-item nzMatchRouter>
-            <a>Workplace</a>
+            <a routerLink="/genes">Genes</a>
           </li>
         </ul>
       </li>
