renamed directory entities -> components

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -40,13 +40,13 @@
           </li>
         </ul>
       </li>
-      <li nz-submenu nzOpen nzTitle="Form" nzIcon="form">
-        <ul>
-          <li nz-menu-item nzMatchRouter>
-            <a>Basic Form</a>
-          </li>
-        </ul>
-      </li>
+      <!-- <li nz-submenu nzOpen nzTitle="Form" nzIcon="form">
+           <ul>
+           <li nz-menu-item nzMatchRouter>
+           <a>Basic Form</a>
+           </li>
+           </ul>
+           </li> -->
     </ul>
   </nz-sider>
   <nz-layout>
