--- a/client/src/styles.less
+++ b/client/src/styles.less
@@ -1,7 +1,19 @@
 
+// Import the official default less style file
+@import "~ng-zorro-antd/ng-zorro-antd.less";
+
+// Import the official dark less style file
+//@import "~ng-zorro-antd/ng-zorro-antd.dark.less";
+
+// Import the official compact less style file
+//@import "~ng-zorro-antd/ng-zorro-antd.compact.less";
+
+// Import the official Aliyun less style file
+//@import "~ng-zorro-antd/ng-zorro-antd.aliyun.less";
+
 // Custom Theming for NG-ZORRO
 // For more information: https://ng.ant.design/docs/customize-theme/en
-@import "../node_modules/ng-zorro-antd/ng-zorro-antd.less";
+// @import "../node_modules/ng-zorro-antd/ng-zorro-antd.less";
 
 // Override less variables to here
 // View all variables: https://github.com/NG-ZORRO/ng-zorro-antd/blob/master/components/style/themes/default.less
