fixed source menu icon

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -40,7 +40,7 @@
         <a routerLink="/diseases" id="main-diseases">Diseases</a>
       </li>
       <li nz-menu-item nzMatchRouter>
-        <i nz-icon nzType="civic:"></i>
+        <i nz-icon nzType="civic:source"></i>
         <a routerLink="/sources" id="main-sources">Sources</a>
       </li>
     </ul>
