styles now loaded from local styles file

--- a/client/src/styles.less
+++ b/client/src/styles.less
@@ -1,15 +1,15 @@
 
 // Import the official default less style file
-@import "~ng-zorro-antd/ng-zorro-antd.less";
+// @import "~ng-zorro-antd/ng-zorro-antd.less";
 
 // Import the official dark less style file
-//@import "~ng-zorro-antd/ng-zorro-antd.dark.less";
+// @import "~ng-zorro-antd/ng-zorro-antd.dark.less";
 
 // Import the official compact less style file
-//@import "~ng-zorro-antd/ng-zorro-antd.compact.less";
+@import "~ng-zorro-antd/ng-zorro-antd.compact.less";
 
 // Import the official Aliyun less style file
-//@import "~ng-zorro-antd/ng-zorro-antd.aliyun.less";
+// @import "~ng-zorro-antd/ng-zorro-antd.aliyun.less";
 
 // Custom Theming for NG-ZORRO
 // For more information: https://ng.ant.design/docs/customize-theme/en
