browse gene view improved with page-header component

--- a/client/src/app/app.component.less
+++ b/client/src/app/app.component.less
@@ -70,11 +70,12 @@ nz-header {
 }
 
 nz-content {
-  margin: 24px;
+  margin: 12px;
 }
 
+// TODO: figure out how to use antd less variables here (removed padding)
 .inner-content {
-  padding: 24px;
+  padding: 0;
   background: #fff;
   height: 100%;
 }
