--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -80,7 +80,7 @@
       </li>
     </ul>
   </nz-sider>
-  <nz-layout>
+  <nz-layout class="right-layout">
     <nz-header>
       <div class="app-header">
         <span class="header-trigger" (click)="isCollapsed = !isCollapsed">
@@ -91,10 +91,8 @@
         </span>
       </div>
     </nz-header>
-    <nz-content>
-      <div class="inner-content">
-        <router-outlet></router-outlet>
-      </div>
+    <nz-content class="inner-content">
+      <router-outlet></router-outlet>
     </nz-content>
   </nz-layout>
 </nz-layout>
