--- a/client/src/app/app.component.less
+++ b/client/src/app/app.component.less
@@ -1,3 +1,5 @@
+@import "~ng-zorro-antd/style/color/colors.less";
+
 :host {
   display: flex;
   text-rendering: optimizeLegibility;
@@ -66,6 +68,7 @@ nz-content {
   padding: 20px 24px;
   font-size: 20px;
   cursor: pointer;
+  color: @geekblue-2;
   transition: all .3s,padding 0s;
 }
 
@@ -82,6 +85,4 @@ nz-header {
   position: relative;
   height: 64px;
   padding: 0;
-  background: #fff;
-  box-shadow: 0 1px 4px rgba(0,21,41,.08);
 }
