--- a/client/src/styles.less
+++ b/client/src/styles.less
@@ -8,8 +8,8 @@
 // Import the official compact less style file
 @import "~ng-zorro-antd/ng-zorro-antd.compact.less";
 
-// Import the official Aliyun less style file
-// @import "~ng-zorro-antd/ng-zorro-antd.aliyun.less";
+// Override compact styles with CIViC default theme
+@import "./themes/default.less";
 
 // Custom Theming for NG-ZORRO
 // For more information: https://ng.ant.design/docs/customize-theme/en
