genes-detail page showing initial list of revisions

--- a/client/src/themes/default.less
+++ b/client/src/themes/default.less
@@ -55,3 +55,11 @@
  * https://github.com/NG-ZORRO/ng-zorro-antd/blob/master/components/style/themes/[default/compact].less
  * or locally: ~ng-zorro-antd/style/themes/[default/compact].less
  */
+
+// CIViC PageHeader
+// ---
+// @page-header-padding: @default-padding-sm;
+// @page-header-padding-vertical: @default-padding-sm;
+// @page-header-heading-title: 16px;
+// @page-header-heading-sub-title: 12px;
+// @page-header-tabs-tab-font-size: 14px;
