--- a/client/src/app/app.component.less
+++ b/client/src/app/app.component.less
@@ -72,6 +72,10 @@ nz-header {
   color: @geekblue-2;
 }
 
+.header-quicksearch p, .header-menu p, .header-user p {
+  color: @geekblue-2;
+}
+
 // CONTENT
 nz-content {
   margin-top: @app-header-height;
