refactored layout routing working properly

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--
-     this main app.component delegates all app layout and routing
+     main app.component delegates all app layout and routing
      to layout.component and layout-routing.module
 -->
 <router-outlet></router-outlet>
