--- a/client/src/app/layout/layout.component.html
+++ b/client/src/app/layout/layout.component.html
@@ -99,6 +99,16 @@
     </nz-header>
     <nz-content class="app-content">
       <router-outlet></router-outlet>
+      <div nz-row>
+        <div nz-icol nzSpan="8" >
+          <h4>data$:</h4>
+          <ngx-json-viewer *ngIf="(data$ | async) as data" [json]="data" [expanded]="false"></ngx-json-viewer>
+        </div>
+        <div nz-icol nzSpan="8" >
+          <h4>viewer$:</h4>
+          <ngx-json-viewer *ngIf="(viewer$ | async) as data" [json]="data" [expanded]="false"></ngx-json-viewer>
+        </div>
+      </div>
     </nz-content>
   </nz-layout>
 </nz-layout>
