created viewer-button, added to layout

--- a/client/src/app/layout/layout.component.html
+++ b/client/src/app/layout/layout.component.html
@@ -94,6 +94,7 @@
         <!-- header user -->
         <div nz-col nzSpan="6" nzOffset="17" class="header-user" style="justify-items: end">
           <cvc-login-button></cvc-login-button>
+          <cvc-viewer-button></cvc-viewer-button>
         </div>
       </div>
     </nz-header>
