--- a/client/src/app/layout/layout.component.html
+++ b/client/src/app/layout/layout.component.html
@@ -101,12 +101,13 @@
     <nz-content class="app-content">
       <router-outlet></router-outlet>
       <div nz-row>
-        <div nz-icol nzSpan="8" >
+        <div nz-icol nzSpan="12" >
           <h4>data$:</h4>
           <ngx-json-viewer *ngIf="(data$ | async) as data" [json]="data" [expanded]="false"></ngx-json-viewer>
         </div>
-        <div nz-icol nzSpan="8" >
+        <div nz-icol nzSpan="12" >
           <h4>viewer$:</h4>
+          Signed in: {{ signedIn$ | async }}
           <ngx-json-viewer *ngIf="(viewer$ | async) as data" [json]="data" [expanded]="false"></ngx-json-viewer>
         </div>
       </div>
