committing partial work on styling the viewer button w/ avatar img

--- a/client/src/app/components/layout/viewer-button/viewer-button.component.html
+++ b/client/src/app/components/layout/viewer-button/viewer-button.component.html
@@ -3,7 +3,14 @@
   nzType="primary"
   nzValue="small"
   nz-dropdown [nzDropdownMenu]="menu" nzPlacement="bottomRight" >
-  <span>{{ username$ | async }}</span>
+
+    <!-- <nz-avatar [nzSrc]="avatarUrl$ | async" [nzSize]="16"
+         [nzShape]="'square'"
+         style="background-color:#f0f5ff;"
+         *ngIf="(avatarUrl$ | async)"></nz-avatar> -->
+  <!-- <i nz-icon nzType="civic:editor"></i> -->
+    {{ username$ | async }}
+
 </button>
 <nz-dropdown-menu #menu="nzDropdownMenu">
   <ul nz-menu>
