figured out comment-list API

--- a/client/src/app/components/shared/comment-list/comment-list.component.html
+++ b/client/src/app/components/shared/comment-list/comment-list.component.html
@@ -16,7 +16,8 @@
       </nz-list-item>
     </ng-template>
   </nz-list>
-  <nz-card nzType="inner" style="margin-top:16px;" nzTitle="Add a Comment">
+  <nz-card nzType="inner" nzTitle="Add a Comment"
+    *ngIf="canCurate$ | async">
     Add Comment Form Here
   </nz-card>
 </nz-card>
